--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   shared_preferences: ^2.0.6
+  flutter_svg: ^2.0.10+1
+  animated_text_kit: ^4.2.2
+  url_launcher: ^6.0.13
+  intl: ^0.19.0
+  image_picker: ^1.1.2
+  table_calendar: ^3.1.2
 
 
 
